# claude-usage-applet-cosmic

./: Cargo.toml  KNOWN_ISSUES.md  README.md  claude-usage-fetch  install.sh  plan.md  uninstall.sh
data/: com.github.mherczeg.claude-usage-applet.desktop
icons/hicolor/: index.theme
src/: api.rs  main.rs  window.rs
